<resources>
    <string name="app_name">Cruise Master</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="on_board">On Board</string>
    <string name="off_board">Off Board</string>
    <string name="signin">Log In</string>
    <string name="login">Login</string>
    <string name="cruisemaster">Cruise Master</string>
    <string name="submit">Submit</string>
    <string name="here">Here</string>
    <string name="submitCrew">Submit</string>
    <string name="submitGuest">Submit</string>
    <string name="viewGuestDetails">View Guest Details</string>
    <string name="viewCrewDetails">View Crew Details</string>
    <string name="downloadCrew">Download Crew Details</string>
    <string name="guestDetails">View Guest Details</string>
    <string name="submitGuestDetails">Submit</string>
    <string name="crewDetails">View Crew Details</string>
    <string name="submitCrewDetails">Submit</string>
    <string name="downloadCrewDetails">Download Crew Details</string>
    <string name="logo">Logo</string>


    <string-array name="spinner_items">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submitmanifest">Download Manifest</string>
</resources>