<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.cruisemaster.viewdetails.viewmodel.VoyageNumberViewModel" />
    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guestDetails"
            android:id="@+id/textGuest"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:background="@color/white"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <Spinner
            android:id="@+id/guestSpinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_ship_spinner_back_ground"
            android:layout_margin="16dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submitGuestDetails"
            android:id="@+id/submit1"
            android:textColor="@color/white"
            android:backgroundTint="@color/button"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/black"
            android:layout_marginVertical="8dp" />

        <TextView
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crewDetails"
            android:textSize="24sp"
            android:textStyle="bold"
            android:padding="8dp"
            android:background="@color/white"
            android:textColor="@android:color/black"
            android:gravity="center" />

        <Spinner
            android:id="@+id/crewSpinner"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/custom_ship_spinner_back_ground"
            android:layout_margin="16dp" />

        <Button
            android:id="@+id/departmentSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submitCrewDetails"
            android:textColor="@color/white"
            android:backgroundTint="@color/button"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <TextView
            android:id="@+id/progressText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Downloading..."
            android:visibility="gone" />


        <Button
            android:id="@+id/downloadmanifest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submitmanifest"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/button"/>

    </LinearLayout>
</layout>